--- a/gap_follow/CMakeLists.txt
+++ b/gap_follow/CMakeLists.txt
@@ -46,6 +46,8 @@ ament_python_install_package(${PROJECT_NAME})
 # Install Python executables
 install(PROGRAMS
   scripts/reactive_node.py
+  scripts/relay.py
+  scripts/talker.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
